--- a/ chapter2/创建和销毁对象.md
+++ b/ chapter2/创建和销毁对象.md
@@ -32,8 +32,8 @@ getType: 像getInstance，如FileStore fs = Files.getFileStore(path);
 tpye: List<Comlaint> l = Collections.list(le)
 ```
 
-### 二. 遇到多个构造器参数时要考虑使用构建器
-1. Builder缺点：在创建对象时，必须先创建它的构建器
+## 二. 遇到多个构造器参数时要考虑使用构建器
+1. Builder缺点：在创建对象时，必须先创建它的构建器，可以直接使用lombok.Builder注解
 ```java
 package effectivejava.chapter2.item2.hierarchicalbuilder;
 import java.util.*;
@@ -61,6 +61,169 @@ public abstract class Pizza {
     
     Pizza(Builder<?> builder) {
         toppings = builder.toppings.clone(); // See Item 50
+    }
+}
+```
+
+## 三. 用私有构造器或者枚举类型强化Singleton属性
+1. Singleton属性：仅仅被实例化一次的类
+
+2. 通过将构造方法私有化确保被实例一次，且成域为final修饰的静态变量
+
+3. transient保证对象在实例化时是瞬时的，并提供readResolve方法，否则在每次序列化时将创建一个对
+
+4. super-students项目代码中工具类采用这种方法，但是没有包含私有的无参构造函数来屏蔽公开的无参构造器
+
+## 四. 通过私有构造器强化不可实例化的能力
+1. 同上第4点，一般用在工厂类中，因为工厂类一般不被实例化
+
+## 五. 优先考虑依赖注入的方式来引用资源
+1. 应该将被依赖的资源实例或者工厂传给下游构造器（或者静态工厂，构建器），通过它们来创建资源类，而不是直接使用这个调用方来创建这些资源
+
+2. java8 提供的Supplier<T>最适合用于表示工厂
+
+## 六. 避免创建不必要的对象
+1. 对于不可变的类，我们一般使用静态工厂方法，而不使用构造器，例如使用Boolean.valueOf(String)而不是Boolean(String)
+
+2. String s = new String("ping") // don't do this
+
+3. 要优先使用基本类型，而不是装箱基本类型，要避免无意识的自动装箱
+
+4. 可以将注重性能的可重用部分缓存起来
+```java
+package effectivejava.chapter2.item6;
+import java.util.regex.Pattern;
+
+// Reusing expensive object for improved performance (Pages 22 and 23)
+public class RomanNumerals {
+    // Performance can be greatly improved! (Page 22)
+    static boolean isRomanNumeralSlow(String s) {
+        return s.matches("^(?=.)M*(C[MD]|D?C{0,3})"
+                + "(X[CL]|L?X{0,3})(I[XV]|V?I{0,3})$");
+    }
+
+    // Reusing expensive object for improved performance (Page 23)
+    private static final Pattern ROMAN = Pattern.compile(
+            "^(?=.)M*(C[MD]|D?C{0,3})"
+                    + "(X[CL]|L?X{0,3})(I[XV]|V?I{0,3})$");
+
+    static boolean isRomanNumeralFast(String s) {
+        return ROMAN.matcher(s).matches();
+    }
+
+    public static void main(String[] args) {
+        int numSets = Integer.parseInt(args[0]);
+        int numReps = Integer.parseInt(args[1]);
+        boolean b = false;
+
+        for (int i = 0; i < numSets; i++) {
+            long start = System.nanoTime();
+            for (int j = 0; j < numReps; j++) {
+                b ^= isRomanNumeralSlow("MCMLXXVI");  // Change Slow to Fast to see performance difference
+            }
+            long end = System.nanoTime();
+            System.out.println(((end - start) / (1_000. * numReps)) + " μs.");
+        }
+
+        // Prevents VM from optimizing away everything.
+        if (!b)
+            System.out.println();
+    }
+}
+```
+
+## 七. 消除过期的对象引用
+1. 过期引用：逻辑上不会被用到的，但是不符合GC规则的对象
+
+2. 清空时直接赋值为null即可
+
+3. **原则：保持紧凑的变量作用域=》可以类比到目前编写的go程序，排查下有没有内存泄露的问题**
+
+4. 常见内存泄露场景：在类中自己管理内存，缓存，监听器或者其他回调
+```java
+package effectivejava.chapter2.item7;
+import java.util.*;
+
+// Can you spot the "memory leak"?  (Pages 26-27)
+public class Stack {
+    private Object[] elements;
+    private int size = 0;
+    private static final int DEFAULT_INITIAL_CAPACITY = 16;
+
+    public Stack() {
+        elements = new Object[DEFAULT_INITIAL_CAPACITY];
+    }
+
+    public void push(Object e) {
+        ensureCapacity();
+        elements[size++] = e;
+    }
+
+    public Object pop() {
+        if (size == 0)
+            throw new EmptyStackException();
+        return elements[--size];
+    }
+
+    /**
+     * Ensure space for at least one more element, roughly
+     * doubling the capacity each time the array needs to grow.
+     */
+    private void ensureCapacity() {
+        if (elements.length == size)
+            elements = Arrays.copyOf(elements, 2 * size + 1);
+    }
+
+//    // Corrected version of pop method (Page 27)
+//    public Object pop() {
+//        if (size == 0)
+//            throw new EmptyStackException();
+//        Object result = elements[--size];
+//        elements[size] = null; // Eliminate obsolete reference
+//        return result;
+//    }
+
+    public static void main(String[] args) {
+        Stack stack = new Stack();
+        for (String arg : args)
+            stack.push(arg);
+
+        while (true)
+            System.err.println(stack.pop());
+    }
+}
+
+```
+
+## 八. 避免使用终结方法和清除方法？
+1. 可以用清除方法cleaner代替终结方法finalizer，但是cleaner也不好
+
+## 九. try-with-resources优于try-finally
+1. **java许多类库中使用close方法来关闭资源，例如InputStream，OutputStream，java.sql.Connection=》在go中可以使用defer处理**
+
+2. 对异常错误栈的处理更加友好，在try-finally中第二个异常也就是finally中的异常可能会抹除try中的异常
+```java
+package effectivejava.chapter2.item9.trywithresources;
+
+
+import java.io.BufferedReader;
+import java.io.FileReader;
+import java.io.IOException;
+
+public class TopLineWithDefault {
+    // try-with-resources with a catch clause  (Page 36)
+    static String firstLineOfFile(String path, String defaultVal) {
+        try (BufferedReader br = new BufferedReader(
+                new FileReader(path))) {
+            return br.readLine();
+        } catch (IOException e) {
+            return defaultVal;
+        }
+    }
+
+    public static void main(String[] args) throws IOException {
+        String path = args[0];
+        System.out.println(firstLineOfFile(path, "Toppy McTopFace"));
     }
 }
 ```
