--- a/ chapter2/创建和销毁对象.md
+++ b/ chapter2/创建和销毁对象.md
@@ -70,7 +70,7 @@ public abstract class Pizza {
 
 2. 通过将构造方法私有化确保被实例一次，且成域为final修饰的静态变量
 
-3. transient保证对象在实例化时是瞬时的，并提供readResolve方法，否则在每次序列化时将创建一个对
+3. transient保证对象在实例化时是瞬时的，并提供readResolve方法，否则在每次序列化时将创建一个对象
 
 4. super-students项目代码中工具类采用这种方法，但是没有包含私有的无参构造函数来屏蔽公开的无参构造器
 
