--- a/ chapter3/通用方法.md
+++ b/ chapter3/通用方法.md
@@ -25,14 +25,14 @@
 以下情况不必重写equals方法  
 1. 类的每个实例化对象都是唯一的
 2. 无需“逻辑相等”的功能
-3，超类已经实现或者重写了equals方法，则在子类中是可以继承的，因此在某些场景下是不需要重写的
+3. 超类已经实现或者重写了equals方法，则在子类中是可以继承的，因此在某些场景下是不需要重写的
 4. 类是私有的或者是包级私有的
 
 重写使的约定：（没有一个类是孤立的）  
-1. 自反性
+1. 自反性：必须与其本身相等
 2. 传递性
 3. 对称性
-4. 一致性
+4. 一致性:位置和时间无关性，只与域相关
 5. 非null的引用值，x.equals(null)返回true
 
 如何高质量重写equals  
@@ -57,11 +57,74 @@
 ### 三. 要始终覆盖toString
 1. 一旦覆盖不要轻易改变格式
  
+### 四. 覆盖clone()方法要谨慎(另一个构造器)
+1. 意义：Cloneable是一个空的接口，如果一个类实现了Cloneable接口，则返回该对象的逐域拷贝，否则抛出CloneNotSupportedException
+
+2. 目的：实现Cloneable接口是为了适当的实现一个公有的clone方法
+
+3. 实现：在子类中重写clone()方法时一定要注意使用super.clone()方法得到一个超类对象，然后转换成当前类对象返回，同时还需要捕获CloneNotSupportedException
+，如果此类中存在需要深层拷贝的对象，要递归的调用拷贝内层与，例如：需要注意的是当克隆的对象中存在数组时需要对数组进行拷贝
+```java
+// Clone method for class with references to mutable state
+  @Override public Stack clone() {
+    try {
+      Stack result = (Stack) super.clone();
+      result.elements = elements.clone();
+      return result;
+    } catch (CloneNotSupportedException e) {
+      throw new AssertionError();
+    }
+  }
+```
+
+4. 最佳方式：使用拷贝构造器或者拷贝工厂。
+```java
+public Yum(Yum y){}
+public static Yum newInstance(Yum yum){}
+```
+
+### 五. 考虑实现Comparable接口
+1. java中所有的值类对象和枚举类都实现了Comparable接口
+```java
+public class WordList{
+  public static void main(String[] arg){
+    Set<String> s = new TreeSet<>();
+    Collections.addAll(s, arg);
+    System.out.println(s);
+  }
+}
+```
+
+2. new BigDecimal("1.0")与new BigDecimal("1.00")添加到HashSet时两个（通过equals比较），添加到TreeSet时是一个（通过compareTo比较）
  
+3. **在java7之前的版本中作者建议使用<>去比较整数型基本类型的域，使用Double.compare和Float.compare
+去比较浮点型类型的域，但是在java7中实现了所有基本类型的compare方法，建议在编写程序的时候也使用此方法**
  
- 
- 
- 
+4. 使用时机：实现一个对排序敏感的类，利于检索排序，分类
+
+5. 实现方法：继承Comparable接口，实现compareTo方法，在比较基本类型时使用compare方法，或者使用比较器构造方法
+```java
+//    // Multiple-field Comparable with primitive fields (page 69)
+//    public int compareTo(PhoneNumber pn) {
+//        int result = Short.compare(areaCode, pn.areaCode);
+//        if (result == 0)  {
+//            result = Short.compare(prefix, pn.prefix);
+//            if (result == 0)
+//                result = Short.compare(lineNum, pn.lineNum);
+//        }
+//        return result;
+//    }
+
+    // Comparable with comparator construction methods (page 70)
+    private static final Comparator<PhoneNumber> COMPARATOR =
+            comparingInt((PhoneNumber pn) -> pn.areaCode)
+                    .thenComparingInt(pn -> pn.prefix)
+                    .thenComparingInt(pn -> pn.lineNum);
+
+    public int compareTo(PhoneNumber pn) {
+        return COMPARATOR.compare(this, pn);
+    }
+```
  
  
  
